just a commit to keep up to date..building..........543210

--- a/w_class/views/open.erb
+++ b/w_class/views/open.erb
@@ -1,3 +1,23 @@
-<form method="post" action="open">
-<input type="submit" value="yes">
-</form>
+ <html>
+ <body>
+ 
+ <form method="post" action="1p_game"> 
+  <input type="text" name="plyr_nm" placeholder="playername" required><br>
+  <input type="radio" name="difc" value="easy" checked>easy<br>
+  <input type="radio" name="difc" value="med">medium<br>
+  <input type="radio" name="difc" value="hard">hard<br>
+ </form>
+ 
+ <h3>Two player game</h3><br>
+ <form method="post" action="humangame">
+     <input type="text" name="p_1name" placeholder="Player I Name" required><br>
+     <br>
+     <input type="text" name="p_2name" placeholder="Player II Name" rquired><br>
+     <br>
+     <input type="submit" name="LetsGo" value="Let's GO">
+ </form>
+
+ </body>
+ 
+ 
+ </html>
