woohoo got it workin on app form..thanks marv

--- a/w_class/views/open.erb
+++ b/w_class/views/open.erb
@@ -6,6 +6,7 @@
   <input type="radio" name="difc" value="easy" checked>easy<br>
   <input type="radio" name="difc" value="med">medium<br>
   <input type="radio" name="difc" value="hard">hard<br>
+  <input type="submit">
  </form>
  
  <h3>Two player game</h3><br>
