--- a/w_class/views/winner.erb
+++ b/w_class/views/winner.erb
@@ -1,1 +1,15 @@
-<%=board: session[:board].board%>
+
+<h2>HEYHEY...WINNERWINNER CHIKKENDINNER</h2>
+
+
+<input type="submit" name="choice" value="1"><%=board[0]%> ||
+<input type="submit" name="choice" value="2"><%=board[1]%> ||
+<input type="submit" name="choice" value="3"><%=board[2]%><br>
+_________________<br>
+<input type="submit" name="choice" value="4"><%=board[3]%> || 
+<input type="submit" name="choice" value="5"><%=board[4]%> || 
+<input type="submit" name="choice" value="6"><%=board[5]%><br>
+_________________<br>
+<input type="submit" name="choice" value="7"><%=board[6]%> || 
+<input type="submit" name="choice" value="8"><%=board[7]%> || 
+<input type="submit" name="choice" value="9"><%=board[8]%><br>
