hmmmph...tryin to figure out how to dynamically change the value on the board to show updated places with markers ...matt tryin to help me figure out what hapened to my console game ..got broken during conversion to app

--- a/views/open.erb
+++ b/views/open.erb
@@ -1,24 +1,23 @@
- <html>
- <body>
- 
-  <form method="post" action="1p_game"> 
-    <input type="text" name="plyr_nm" placeholder="playername" required><br>
-    <input type="radio" name="difc" value="easy" checked>easy<br>
-    <input type="radio" name="difc" value="med">medium<br>
-    <input type="radio" name="difc" value="hard">hard<br>
-    <input type="submit">
-  </form>
- 
- <h3>Two player game</h3><br>
-  <form method="post" action="humangame">
-    <input type="text" name="p_1name" placeholder="Player I Name" required><br>
-    <br>
-    <input type="text" name="p_2name" placeholder="Player II Name" rquired><br>
-    <br>
-    <input type="submit" name="LetsGo" value="Let's GO">
-  </form>
+<html>
+  <body>
+    <h2>One Player Game </h2>
+      <h3>And Your Name Is?</h3>
+    <form method="post" action="1p_game"> 
+      <input type="text" name="plyr_nm" placeholder="playername" required><br>
+      <input type="radio" name="difc" value="easy" checked>easy<br>
+      <input type="radio" name="difc" value="med">medium<br>
+      <input type="radio" name="difc" value="hard">hard<br>
+      <input type="submit">
+    </form>
+  
+      <h3>Two player game</h3><br>
+    <form method="post" action="humangame">
+      <input type="text" name="p_1name" placeholder="Player I Name" required><br>
+      <br>
+      <input type="text" name="p_2name" placeholder="Player II Name" required><br>
+      <br>
+      <input type="submit" name="Go" value="Lettuce GO">
+    </form>
 
- </body>
- 
- 
- </html>
+  </body>
+</html>
