so...can't figure out whats up with the move part of the unbeetleble

--- a/views/winner.erb
+++ b/views/winner.erb
@@ -1,4 +1,4 @@
-
+<h>
 <h2>HEYHEY...WINNERWINNER CHIKKENDINNER</h2>
 
   
@@ -15,3 +15,5 @@
   <input type="submit" name="choice" value="8"><%=board[7]%> || 
   <input type="submit" name="choice" value="9"><%=board[8]%><br>
 </body>
+play again?
+<a href = /open></a>
