yeee...haaa...finished up w/ debugging my unbeat...got the board updating in place rather than beside the mark... table and css next...oooright

--- a/views/open.erb
+++ b/views/open.erb
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h2>One Player Game </h2>
+    <h1>One Player Game </h1>
       <h3>And Your Name Is?</h3>
     <form method="post" action="1p_game"> 
       <input type="text" name="plyr_nm" placeholder="playername" required><br>
@@ -10,7 +10,7 @@
       <input type="submit">
     </form>
   
-      <h3>Two player game</h3><br>
+      <h3>Two Player Game</h3><br>
     <form method="post" action="humangame">
       <input type="text" name="p_1name" placeholder="Player I Name" required><br>
       <br>
