--- a/views/winner.erb
+++ b/views/winner.erb
@@ -14,6 +14,6 @@
   <input type="submit" name="choice" value="7"><%=board[6]%> || 
   <input type="submit" name="choice" value="8"><%=board[7]%> || 
   <input type="submit" name="choice" value="9"><%=board[8]%><br>
-</body>
+</body><br>
 play again?
-<a href = /open></a>
+    <a href="/">play again</a>
