--- a/views/gameboard.erb
+++ b/views/gameboard.erb
@@ -1,23 +1,48 @@
 <html>
 <%=mssg%>
-<body>
-<form method = "post" action = "gameloop">
+  <body>
+    <form method = "post" action = "gameloop">
+      <%if board[0] == ""%>
+        <input type="submit" name="choice" value="1"><%=board[0]%> ||
+      <%else%> <%=board[0]%> ||
+      <%end%> 
+      <%if board[1] == ""%>
+      <input type="submit" name="choice" value="2"><%=board[1]%> ||
+      <%else%> <%=board[1]%>
+      <%end%>
+      <%if board[2] == ""%>
+        <input type="submit" name="choice" value="3"><%=board[2]%> ||
+      <%else%> <%=board[2]%> ||
+      <%end%><br> 
+      ===========<br>
+      <%if board[3] == ""%>
+      <input type="submit" name="choice" value="4"><%=board[3]%> ||
+      <%else%> <%=board[3]%>
+      <%end%>
+      <%if board[4] == ""%>
+        <input type="submit" name="choice" value="5"><%=board[4]%> ||
+      <%else%> <%=board[4]%> ||
+      <%end%> 
+      <%if board[5] == ""%>
+      <input type="submit" name="choice" value="6"><%=board[5]%> ||
+      <%else%> <%=board[5]%>
+      <%end%><br>
+      ===========<br>
+      <%if board[6] == ""%>
+        <input type="submit" name="choice" value="7"><%=board[6]%> ||
+      <%else%> <%=board[6]%> ||
+      <%end%> 
+      <%if board[7] == ""%>
+      <input type="submit" name="choice" value="8"><%=board[7]%> ||
+      <%else%> <%=board[7]%>
+      <%end%>
+       <%if board[8] == ""%>
+        <input type="submit" name="choice" value="9"><%=board[8]%> ||
+      <%else%> <%=board[8]%> ||
+      <%end%><br>
+    </form>
 
-<input type="submit" name="choice" value="1"><%=board[0]%> ||
-<input type="submit" name="choice" value="2"><%=board[1]%> ||
-<input type="submit" name="choice" value="3"><%=board[2]%><br>
-_________________<br>
-<input type="submit" name="choice" value="4"><%=board[3]%> || 
-<input type="submit" name="choice" value="5"><%=board[4]%> || 
-<input type="submit" name="choice" value="6"><%=board[5]%><br>
-_________________<br>
-<input type="submit" name="choice" value="7"><%=board[6]%> || 
-<input type="submit" name="choice" value="8"><%=board[7]%> || 
-<input type="submit" name="choice" value="9"><%=board[8]%><br>
-
-</form>
-
-</body>
+  </body>
 
 
 </html>
