startin to build the databasefunc....gotta d/l dbeaver when i get back to the office, done for the night

--- a/views/gameboard.erb
+++ b/views/gameboard.erb
@@ -1,5 +1,7 @@
+<!doctype html>
 <html>
-<%=mssg%>
+  <%=mssg%>
+
   <body>
     <form method = "post" action = "gameloop">
       <%if board[0] == ""%>
