oohrah...did some css to make 'er prettier...keeping with the hallows eve theme ...for solidarity....finishing up th dbase funcs. gotta make the firing and two player funcs. definitely feelin better about it

--- a/views/kittie.erb
+++ b/views/kittie.erb
@@ -1,2 +1,21 @@
-<h1>KitTies Game</h1>
+<html>
+
+        <h5>KitTies Game</h5>
+  <body>
+    <input type="submit" name="choice" value="<%=board[0]%>"> ||
+    <input type="submit" name="choice" value="<%=board[1]%>"> ||
+    <input type="submit" name="choice" value="<%=board[2]%>"><br>
+    _________________<br>
+    <input type="submit" name="choice" value="<%=board[3]%>"> || 
+    <input type="submit" name="choice" value="<%=board[4]%>"> || 
+    <input type="submit" name="choice" value="<%=board[5]%>"><br>
+    _________________<br>
+    <input type="submit" name="choice" value="<%=board[6]%>"> || 
+    <input type="submit" name="choice" value="<%=board[7]%>"> || 
+    <input type="submit" name="choice" value="<%=board[8]%>"><br>
+  </body><br>
+
+
+
 <a href="/">play again</a>
+</html>
