--- a/views/open.erb
+++ b/views/open.erb
@@ -1,9 +1,9 @@
 <html>
   <body>
-    <h1>One Player Game </h1>
-      <h3>And Your Name Is?</h3>
+      <h3>One Player Game</h3>
+      <h4>And Your Name Is?</h4>
     <form method="post" action="1p_game"> 
-      <input type="text" name="plyr_nm" placeholder="playername" required><br>
+      <input type="text" name="plyr_nm" placeholder="Player Name" required><br>
       <input type="radio" name="difc" value="easy" checked>easy<br>
       <input type="radio" name="difc" value="med">medium<br>
       <input type="radio" name="difc" value="hard">hard<br>
@@ -16,7 +16,7 @@
       <br>
       <input type="text" name="p_2name" placeholder="Player II Name" required><br>
       <br>
-      <input type="submit" name="Go" value="Lettuce GO">
+      <input type="submit" name="Go" value="GO">
     </form>
 
   </body>
