--- a/views/winner.erb
+++ b/views/winner.erb
@@ -3,17 +3,19 @@ HEYHEYHEY...WINNERWINNER CHIKKENDINNER<br>
 
   
 <body>
-  <input type="submit" name="choice" value="<%=board[0]%>"> ||
-  <input type="submit" name="choice" value="<%=board[1]%>"> ||
+  <input type="submit" name="choice" value="<%=board[0]%>"> I
+  <input type="submit" name="choice" value="<%=board[1]%>"> I
   <input type="submit" name="choice" value="<%=board[2]%>"><br>
-  _________________<br>
-  <input type="submit" name="choice" value="<%=board[3]%>"> || 
-  <input type="submit" name="choice" value="<%=board[4]%>"> || 
+  ============<br>
+  <input type="submit" name="choice" value="<%=board[3]%>"> I 
+  <input type="submit" name="choice" value="<%=board[4]%>"> I 
   <input type="submit" name="choice" value="<%=board[5]%>"><br>
-  _________________<br>
-  <input type="submit" name="choice" value="<%=board[6]%>"> || 
-  <input type="submit" name="choice" value="<%=board[7]%>"> || 
+  ============<br>
+  <input type="submit" name="choice" value="<%=board[6]%>"> I 
+  <input type="submit" name="choice" value="<%=board[7]%>"> I 
   <input type="submit" name="choice" value="<%=board[8]%>"><br>
 </body><br>
-play again?
+
+
+Play Again?<br>
     <a href="/">play again</a>
