annnd ...seems like progress

--- a/views/open.erb
+++ b/views/open.erb
@@ -20,7 +20,7 @@
       
       <h3>LeaderBoard</h3><br>
     <form method="post" action="score">
-			<input type="hidden" name="data[]">
+			<input type="hidden" name="list">
 			<input type="submit" value="SCORE">
 		</form>
 
