grrr... can't figure out how to get players to be able to move for two player...think i need two player to work to be able to try and track stats..not sure how to track the win either

--- a/views/open.erb
+++ b/views/open.erb
@@ -13,13 +13,12 @@
       <h3>Two Player Game</h3><br>
     <form method="post" action="humangame">
       <input type="text" name="p_1name" placeholder="Player I Name" required> <br>
-      <input type="text" name="p_2name" placeholder="Player II Name" required>
-      <br>
+      <input type="text" name="p_2name" placeholder="Player II Name" required><br>
       <input type="submit" name="go" value="GO">
     </form>
       
       <h3>LeaderBoard</h3><br>
-    <form method="post" action="score">
+    <form method="post" action="scores">
 			<input type="hidden" name="list">
 			<input type="submit" value="SCORE">
 		</form>
