I'mmabout ta give up

--- a/views/open.erb
+++ b/views/open.erb
@@ -14,13 +14,9 @@
     <form method="post" action="humangame">
       <input type="text" name="p_1name" placeholder="Player I  Name" required><br>
       <input type="text" name="p_2name" placeholder="Player II Name" required><br>
-      <input type="submit" name="go" value="Hgo">
+      <input type="submit" name="go" value="gHo">
     </form>
       
-      <h3>LeaderBoard</h3><br>
-    <form method="post" action="scores">
-			<input type="submit" value="SCORE">
-		</form>
-
+      
   </body>
 </html>
