welll....lestrythis...hashing out all dbase stuff

--- a/views/open.erb
+++ b/views/open.erb
@@ -17,6 +17,10 @@
       <input type="submit" name="go" value="gHo">
     </form>
       
-      
+      <h3>LeaderBoard</h3><br>
+    <form method="post" action="scores">
+			<input type="submit" value="SCORE">
+		</form>
+
   </body>
 </html>
