editing 1player route to allow for ai vs ai

--- a/views/open.erb
+++ b/views/open.erb
@@ -3,10 +3,10 @@
       <h3>One Player Game</h3>
       <h4>And Your Name Is?</h4>
     <form method="post" action="1p_game"> 
-      <input type="text" name="p1_name" placeholder="Player Name" required><br>
-      <input type="radio" name="difc" value="easy" checked>easy<br>
-      <input type="radio" name="difc" value="med">medium<br>
-      <input type="radio" name="difc" value="hard">hard<br>
+      <input type="radio" name="difc"  value="human">Human<br>
+      <input type="radio" name="difc" value="easy">Easy<br>
+      <input type="radio" name="difc" value="med">Med<br>
+      <input type="radio" name="difc" value="hard">Hard<br>
       <input type="submit"name="go" value = "GO">
     </form>
   
@@ -14,12 +14,12 @@
     <form method="post" action="humangame">
       <input type="text" name="p_1name" placeholder="Player I  Name" required><br>
       <input type="text" name="p_2name" placeholder="Player II Name" required><br>
-      <input type="submit" name="go" value="gHo">
+      <input type="submit" name="go" value="GO">
     </form>
       
       <h3>LeaderBoard</h3><br>
     <form method="post" action="scores">
-			<input type="submit" value="SCORE">
+			<input type="submit" value="LEADERBOARD">
 		</form>
 
   </body>
