wheehooo...everything but the dbase is on...sumfin weird with my unbeetl.vs unbeetle...does fine human vs un...lookin into it

--- a/views/open.erb
+++ b/views/open.erb
@@ -1,25 +1,26 @@
 <html>
   <body>
       <h3>One Player Game</h3>
-      <h4>And Your Name Is?</h4>
+        <h4>And Your Name Is?</h4>
     <form method="post" action="1p_game"> 
-      <input type="radio" name="difc"  value="human">Human<br>
+      <input type="text" name="p1_name" placeholder="Player Name" required><br>
+      <input type="radio" name="difc" value="human">Human<br>
       <input type="radio" name="difc" value="easy">Easy<br>
       <input type="radio" name="difc" value="med">Med<br>
-      <input type="radio" name="difc" value="hard">Hard<br>
-      <input type="submit"name="go" value = "GO">
+      <input type="radio" name="difc" value="hard"checked>Hard<br>
+          Player2 name your AI 
+      <input type="text" name="p2_name" placeholder="AI Name" required><br>
+      <input type="radio" name="difc2" value="human">Human<br>
+      <input type="radio" name="difc2" value="easy">Easy<br>
+      <input type="radio" name="difc2" value="med">Med<br>
+      <input type="radio" name="difc2" value="hard"checked>Hard<br>   
+      <input type="submit"name="go" value ="GO">
     </form>
   
-      <h3>Two Player Game</h3><br>
-    <form method="post" action="humangame">
-      <input type="text" name="p_1name" placeholder="Player I  Name" required><br>
-      <input type="text" name="p_2name" placeholder="Player II Name" required><br>
-      <input type="submit" name="go" value="GO">
-    </form>
       
       <h3>LeaderBoard</h3><br>
     <form method="post" action="scores">
-			<input type="submit" value="LEADERBOARD">
+			<input type="submit" value="SCORE">
 		</form>
 
   </body>
