yeefreakinhaw....found and fixed the issue with my unbeets beeting itself...got a small error with pushing to my dbase...gots dis

--- a/views/open.erb
+++ b/views/open.erb
@@ -8,8 +8,8 @@
       <input type="radio" name="difc" value="easy">Easy<br>
       <input type="radio" name="difc" value="med">Med<br>
       <input type="radio" name="difc" value="hard"checked>Hard<br>
-          Player2 name your AI 
-      <input type="text" name="p2_name" placeholder="AI Name" required><br>
+          Player2 Name<br> 
+      <input type="text" name="p2_name" placeholder="Player2 Name" required><br>
       <input type="radio" name="difc2" value="human">Human<br>
       <input type="radio" name="difc2" value="easy">Easy<br>
       <input type="radio" name="difc2" value="med">Med<br>
