--- a/views/open.erb
+++ b/views/open.erb
@@ -19,9 +19,7 @@
   
       
       <h3>LeaderBoard</h3><br>
-    <form method="post" action="scores">
-			<input type="submit" value="SCORE">
-		</form>
+    <a href = '/scores'>Scores</a>
 
   </body>
 </html>
