--- a/views/scoreboard.erb
+++ b/views/scoreboard.erb
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html>
-				<h1>LeaderBoard</h1>
+				<h2>LeaderBoard
 	<body>
-		<table width = 95% height = 75%>
-		
-        <%if result == ""%>
   
-        <%else%>
-          <%result.each do |score|%>
-            <%score.each do |show|%>
-              <%=show%>
-            <%end%><br>
-          <%end%><br>
-        <%end%><br>
-	
+		<table width = 95% height = 75%>	
   		<form method="post" action="return">
-        <th>p1_name</th>
-        <th>p2_name</th>
+        <th>p1name</th>
+        <th>P2name</th>
         <th>Winner</th> 
         <th>Time</th>
-      <%if list == ""%>
-
-			<%else%>
-				<%list.each do |row|%>
-					<tr>	
-						<td><input type="hidden" name="scores" value="<%=row['id']%>"></td>
-            <td><%=row['p1_name']%></td>
-						<td><%=row['p2_name']%></td>
-						<td><%=row['winner']%></td>									
-						<td><%=row['time']%></td>
-					</tr><br>
-				<%end%>	
-			<%end%>
-		</table>	 	
+      
+    <%result.each do |row|%>
+      <tr>	
+        <td><%=row['p1_name']%></td>
+        <td><%=row['p2_name']%></td>
+        <td><%=row['winner']%></td>	
+        <td><%=row['gametime']%></td>
+      </tr>
+    <%end%>	
+		</table>	 
+    </body>	
+    </h2>
