--- a/views/kittie.erb
+++ b/views/kittie.erb
@@ -2,17 +2,17 @@
 
         <h5>KitTies Game</h5>
   <body>
-    <input type="submit" name="choice" value="<%=board[0]%>"> I
-    <input type="submit" name="choice" value="<%=board[1]%>"> I
-    <input type="submit" name="choice" value="<%=board[2]%>"><br>
+    <input type="submit" class="classsquares" name="choice" value="<%=board[0]%>"> I
+    <input type="submit" class="classsquares" name="choice" value="<%=board[1]%>"> I
+    <input type="submit" class="classsquares" name="choice" value="<%=board[2]%>"><br>
     ===========<br>
-    <input type="submit" name="choice" value="<%=board[3]%>"> I
-    <input type="submit" name="choice" value="<%=board[4]%>"> I
-    <input type="submit" name="choice" value="<%=board[5]%>"><br>
+    <input type="submit" class="classsquares" name="choice" value="<%=board[3]%>"> I
+    <input type="submit" class="classsquares" name="choice" value="<%=board[4]%>"> I
+    <input type="submit" class="classsquares" name="choice" value="<%=board[5]%>"><br>
     ===========<br>
-    <input type="submit" name="choice" value="<%=board[6]%>"> I 
-    <input type="submit" name="choice" value="<%=board[7]%>"> I 
-    <input type="submit" name="choice" value="<%=board[8]%>"><br>
+    <input type="submit" class="classsquares" name="choice" value="<%=board[6]%>"> I 
+    <input type="submit" class="classsquares" name="choice" value="<%=board[7]%>"> I 
+    <input type="submit" class="classsquares" name="choice" value="<%=board[8]%>"><br>
   </body><br>
 
 
