--- a/views/winner.erb
+++ b/views/winner.erb
@@ -1,20 +1,48 @@
 
 HEYHEYHEY...WINNERWINNER CHIKKENDINNER<br>
+CONGRATS:<br>
+<%=winner%>
+ <h5>
+        <%if board[0] == ""%>
+          <input type="submit" class="classsquares" name="choice" value="  "> I
+        <%else%>  <input type="submit" class="classsquares" name="choice" value="<%=board[0]%>"> I
+        <%end%> 
+        <%if board[1] == ""%>
+        <input type="submit" class="classsquares" name="choice" value="  "> I
+        <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[1]%>"> I
+        <%end%>
+        <%if board[2] == ""%>
+          <input type="submit" class="classsquares" name="choice" value="  "> I
+        <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[2]%>"> I
+        <%end%><br> 
+        ============<br>
+        <%if board[3] == ""%>
+        <input type="submit" class="classsquares" name="choice" value="  "> I
+        <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[3]%>"> I
+        <%end%>
+        <%if board[4] == ""%>
+          <input type="submit" class="classsquares" name="choice" value="  "><%=board[4]%> I
+        <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[4]%>"> I
+        <%end%> 
+        <%if board[5] == ""%>
+        <input type="submit" class="classsquares" name="choice" value="  "><%=board[5]%> I
+        <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[5]%>"> I
+        <%end%><br>
+        ============<br>
+        <%if board[6] == ""%>
+          <input type="submit" class="classsquares" name="choice" value="  "><%=board[6]%> I
+        <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[6]%>"> I
+        <%end%> 
+        <%if board[7] == ""%>
+        <input type="submit" class="classsquares" name="choice" value="  "><%=board[7]%> I
+        <%else%> <input type="submit"class="classsquares" name="choice" value="<%=board[7]%>"> I
+        <%end%>
+        <%if board[8] == ""%>
+          <input type="submit" class="classsquares" name="choice" value="  "><%=board[8]%> I
+        <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[8]%>"> I
+        <%end%><br>
+      </h5>
 
-  
-<body>
-  <input type="submit" name="choice" value="<%=board[0]%>"> I
-  <input type="submit" name="choice" value="<%=board[1]%>"> I
-  <input type="submit" name="choice" value="<%=board[2]%>"><br>
-  ============<br>
-  <input type="submit" name="choice" value="<%=board[3]%>"> I 
-  <input type="submit" name="choice" value="<%=board[4]%>"> I 
-  <input type="submit" name="choice" value="<%=board[5]%>"><br>
-  ============<br>
-  <input type="submit" name="choice" value="<%=board[6]%>"> I 
-  <input type="submit" name="choice" value="<%=board[7]%>"> I 
-  <input type="submit" name="choice" value="<%=board[8]%>"><br>
-</body><br>
 
 
 Play Again?<br>
