apparently i'll always find something don't like about my layout and or setup...lolz

--- a/views/winner.erb
+++ b/views/winner.erb
@@ -21,24 +21,24 @@ CONGRATS:<br>
         <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[3]%>"> I
         <%end%>
         <%if board[4] == ""%>
-          <input type="submit" class="classsquares" name="choice" value="  "><%=board[4]%> I
+          <input type="submit" class="classsquares" name="choice" value="  "> I
         <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[4]%>"> I
         <%end%> 
         <%if board[5] == ""%>
-        <input type="submit" class="classsquares" name="choice" value="  "><%=board[5]%> I
+        <input type="submit" class="classsquares" name="choice" value="  "> I
         <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[5]%>"> I
         <%end%><br>
         ============<br>
         <%if board[6] == ""%>
-          <input type="submit" class="classsquares" name="choice" value="  "><%=board[6]%> I
+          <input type="submit" class="classsquares" name="choice" value="  "> I
         <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[6]%>"> I
         <%end%> 
         <%if board[7] == ""%>
-        <input type="submit" class="classsquares" name="choice" value="  "><%=board[7]%> I
+        <input type="submit" class="classsquares" name="choice" value="  "> I
         <%else%> <input type="submit"class="classsquares" name="choice" value="<%=board[7]%>"> I
         <%end%>
         <%if board[8] == ""%>
-          <input type="submit" class="classsquares" name="choice" value="  "><%=board[8]%> I
+          <input type="submit" class="classsquares" name="choice" value="  "> I
         <%else%> <input type="submit" class="classsquares" name="choice" value="<%=board[8]%>"> I
         <%end%><br>
       </h5>
