--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,8 @@
 <html>
 	<link rel="stylesheet" href="css/style.css">
     <h1>Tic To The TiggyTuh TicTacToe</h1>
-
+      MAIN MENU<br>
+    <a href = '/'>menu</a><br>
 
     <body>
       <%=yield%>
