--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ h1{
   color: rgb(230, 122, 22); 
   opacity: 0.5;
   width: 33%;
-  height: 15%;
+  height: 7%;
   padding-top: 13px;
   padding-bottom: 17px;
   border:13px rgb(224, 93, 22);
@@ -16,9 +16,10 @@ h2{
   /* text-align:center;  */
   margin-left:30%;
   color: rgb(133, 16, 16); 
-  opacity: 0.5;
+  opacity: 0.7;
   width: 36%;
-  height: 22%;
+  /* height: 72vh; */
+  max-height:300vh;
   padding: 15px;
   border: 13px rgb(80, 40, 8);
   border-style: inset;	
